# weather-dashboard

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  index.html  manifest.json  pyproject.toml  render.yaml  requirements.txt  script.js  sw.js
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: main.yml
e2e/: search.spec.js
tests/: conftest.py  test_api.py
